[package]
name = "epic-directory"
version = "0.1.0"
authors = ["Mikhail Novikov <freiksenet@gmail.com>"]
edition = "2021"

[dependencies]
epic-kdl = { path="../epic-kdl" }
dioxus = "0.3"
dioxus-web = "0.3"
reqwasm = "0.5.0"
log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.61"
features = [
  "Document",
  "Window"
]

[profile.release]
# Do not perform backtrace for panic on release builds.
panic = 'abort'
# Perform optimizations on all codegen units.
codegen-units = 1
# Optimize for size.
opt-level = 'z' # or 'z' to optimize "aggressively" for size
# Enable link time optimization.
lto = true
strip = true  # Automatically strip symbols from the binary.
