[package]
name = "epic-kdl"
version = "0.1.0"
edition = "2021"
authors = ["Mikhail Novikov <freiksenet@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
kdl = "4.6.0"
miette = { version = "4.7.1", features = ["fancy"] }
knuffel = { path = "../vendor/knuffel" }
askama = "0.11.1"
english-numbers = "0.3.3"
